# QCloudMusicServer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  generateconfig.h  server.cpp
.github/workflows/: macos.yml  windows.yml
QCloudMusicServer/: CMakeLists.txt  main.cpp  server.cpp
